# ecma33330_proj

./: .gitignore  LICENSE  Makefile  README.md  create_flows.do  downloads.py  empty_flow.do  empty_short_ts.do  figures_tables.py  gen_shortadj.do  match_extract.do  match_flow.do  match_merge.do  match_sa.do  merge.py  pyproject.toml  setup.cfg  setup.py  shortadj.R  three-state.wls
blsdata-retrieve/src/: Makefile  Makefile.orig  blsdata-retrieve.py  sa_short_emp_from_CPSdata.py  u-v-f-s.nb  u-v-f-s.py
cps-merge/src/: Makefile  match_flow.do  match_flow.py  match_merge.do  match_merge.py
cpsb-check-availability/src/: Makefile
cpsb-download/src/: Makefile
cpsb-extract/src/: Makefile  match_extract.do  match_extract.py
flow-seasonal-adjustment/src/: Makefile  match_sa.do  match_sa.py
plot/input/: LNS14000000.txt  eiM_rate.txt  euM_rate.txt  ieM_rate.txt  iuM_rate.txt  ueM_rate.txt  uiM_rate.txt
plot/src/: Makefile  plot.py
short-unemp/src/: Makefile  gen_shortemp.do  gen_shortemp.py
src/: __main__.py  match_extract.py  match_flow.py
src/reassessing_the_ins_and_outs_of_unemployment/: __main__.py  blsdata_retrieve.py  download_cps.py  draw_plots.py  match_merge.py  match_sa.py  other_utils.py  three_state.py
three-states/src/: Makefile  three-state-M.wls  three-state.py
