[metadata]
name = reassessing_the_ins_and_outs_of_unemployment
version = 0.1
author = Ye Sun
author_email = ye.sun1@sciencespo.fr
description = A package that replicates and extends Shimer (2012) "Reassessing the ins and outs of unemployment"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/caibengbu/ecma33330_proj
project_urls =
    Bug Tracker = https://github.com/caibengbu/ecma33330_proj/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src